--- a/assets/l10n/app_en.arb
+++ b/assets/l10n/app_en.arb
@@ -85,6 +85,8 @@
     "cancel": "Cancel",
     "wordsBottomBar": "Words",
     "lettersBottomBar": "Letters",
+    "privacyPolicy": "Privacy Policy",
+    "terms": "Terms",
     "deleteData": "Delete Data",
     "deleteDataWarning": "All data will be deleted. Are you sure you want to continue?"
 }
