--- a/assets/l10n/app_en.arb
+++ b/assets/l10n/app_en.arb
@@ -70,11 +70,11 @@
     "unlockWordMatch": "I want to unlock the Match words to pictures feature",
     "unlockWordSelection": "I want to unlock the Choose the appropriate word feature",
     "color": "Color",
-    "fruit": "Fruit",
+    "vietnameseFood": "Vietnamese Food",
     "animal": "Animal",
     "vehicle": "Vehicle",
-    "shape": "Shape",
-    "schoolSupply": "School Supply",
+    "occupation": "Occupation",
+    "weather": "Weather",
     "objectsAndThings": "Objects And Things",
     "changePassword": "Change Password",
     "currentPassword": "Current Password",
