--- a/assets/l10n/app_vi.arb
+++ b/assets/l10n/app_vi.arb
@@ -70,11 +70,11 @@
     "unlockWordMatch": "Tôi muốn mở khoá tính năng Ghép từ vào tranh",
     "unlockWordSelection": "Tôi muốn mở khoá tính năng Chọn Từ Thích Hợp",
     "color": "Màu sắc",
-    "fruit": "Hoa quả",
+    "vietnameseFood": "Ẩm thực Việt Nam",
     "animal": "Động vật",
     "vehicle": "Phương tiện giao thông",
-    "shape": "Hình khối",
-    "schoolSupply": "Đồ dùng học tập",
+    "occupation": "Nghề nghiệp",
+    "weather": "Thời tiết",
     "objectsAndThings": "Đồ vật và sự vật",
     "changePassword": "Đổi mật khẩu",
     "currentPassword": "Mật khẩu hiện tại",
